# Graphics_2022-1

./: README.md
hw1/problem1/shaders/: shader.vs
hw1/problem1/src/: main.cpp
hw1/problem2/shaders/: shader.vs
hw1/problem2/src/: main.cpp  text_renderer.cpp  text_renderer.h
hw1/problem3/shaders/: convolution.fs  shader.fs
hw1/problem3/src/: main.cpp
hw2/shaders/: shader.fs  shader.vs  shader_skybox.fs  shader_skybox.vs
hw2/src/: camera.h  geometry_primitives.h  main.cpp  texture_cube.h
hw3/problem12/shaders/bezier_surface/: TCS.glsl
hw3/problem12/shaders/splines/: spline_shader.gs  spline_shader.vs
hw3/problem12/src/: main.cpp  opengl_utils.h  resource_utils.h
hw3/problem3/src/: class.cpp  class.h  main.cpp
hw4/: aboutPCF.txt
hw4/shaders/: shader_lighting.fs  shader_lighting.vs  shadow.fs
hw4/src/: light.h  main.cpp  mesh.h  model.h  scene.h
hw5/shaders/: shader_ray_tracing.fs
hw5/src/: main.cpp
lab1/: CMakeLists.txt
lab1/src/: app  main.cpp
lab1/src/app.dSYM/Contents/Resources/DWARF/: app
lab2/: CMakeLists.txt
lab2/shaders/: shader.fs  shader.vs
lab2/src/: main.cpp
lab3/: CMakeLists.txt
lab3/shaders/: geometry_shader.fs  geometry_shader.gs  geometry_shader.vs
lab3/src/: main.cpp
